cambio en gitIgnore

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,11 @@
 
   background-color: brown;
 }
+.item-list-container{
+
+  background-color: chocolate;
+  width: 100%;
+  height: 500px;
+  margin-top: 5px;
+
+}
