--- a/src/App.css
+++ b/src/App.css
@@ -42,15 +42,26 @@
 } */
 
 
-.Body{
+.nav-bar{
 
   background-color: brown;
 }
-.item-list-container{
+.body{
 
   background-color: chocolate;
   width: 100%;
-  height: 500px;
+  height: 700px;
   margin-top: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+ 
+}
+h1{
+color: rgba(9, 108, 128, 0.968);
+text-shadow: 3px 0px 7px rgba(23, 23, 15, 0.8), 
+	  -3px 0px 7px rgba(81,67,21,0.8), 
+	  0px 4px 7px rgba(81,67,21,0.8);
 
 }
