--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,8 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-} 
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
-
 
 .nav-bar{
 
   background-color: brown;
+  grid-area: nav-bar;
 }
 .body{
 
@@ -56,6 +14,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  grid-area: body;
  
 }
 h1{
@@ -65,3 +24,15 @@ text-shadow: 3px 0px 7px rgba(23, 23, 15, 0.8),
 	  0px 4px 7px rgba(81,67,21,0.8);
 
 }
+
+.container {  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0.5fr 1.5fr 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "nav-bar nav-bar"
+    "body body"
+    "body body";
+}
+
